--- a/index.html
+++ b/index.html
@@ -14,9 +14,21 @@
 
   <body>
     <div class="container">
+      <nav class="navbar navbar-expand-lg bg-light my-3">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">Oquirrh Point Cultural Celebration</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          </div>
+        </div>
+      </nav>
       <img src="unnamed.png" style="width: 100%;">
 
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
   </body>
 </html>
 
